update:CRUD for Thread
